Modifications in the code

--- a/.env
+++ b/.env
@@ -1,1 +1,4 @@
 SECRET = 'this-is-my-secret';
+PAYPAL_CLIENT_ID="
+AVtmFkmVPYI4lI4M7XlEiVk83pkwMRFtHwEjzO1JnJjV_LYKLCMyoshbOpBanmwwVcO3hMDKKqotU-5P"
+PAYPAL_CLIENT_SECRET="ENYx-kT5qT6SW0s81HpnhlKcvyB5TL1G-ks3x2FMzf4uTWpKepaUJ583HYfdht3LjjXSBmAAv7DVULP_"
